--- a/opdracht4.1/style.css
+++ b/opdracht4.1/style.css
@@ -28,3 +28,53 @@ a{
     color: #8a2be2;
     text-decoration: none;
 }
+.header{
+    width: 100%;
+    height: 100px;
+    display: block;
+    background-image: url(/opdracht4.1/img/platoon3.avif);
+    
+}
+.innerheader{
+    width: 1000px;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+    
+}
+.header_text{
+    color: black;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+.text_box h1{
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 30px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.text_box p{
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 30px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+article{
+    border-left: 7px;
+    border-radius: 5px;
+    border-color: rgb(18, 113, 50);
+    border-top-style: dotted;
+    border-right-style: solid;
+    border-bottom-style: dotted;
+    border-left-style: solid;
+}
+img{
+width: 50%;
+}
