--- a/opdracht6.3/style.css
+++ b/opdracht6.3/style.css
@@ -1,15 +1,59 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
+/* Reset some default styles */
+body, ul {
     margin: 0;
+    padding: 0;
+    list-style: none;
 }
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    display: flex;
-    width: max-content 1200px;
-    float: left;
-  }
 
+ 
+
+/* Basic styles for the navbar */
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+}
+
+ 
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
+ 
+
+.navbar-logo {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+ 
+
+.navbar-nav {
+    display: flex;
+    gap: 20px;
+}
+
+ 
+
+.nav-item {
+    margin-right: 10px;
+    text-align: center;
+}
+
+ 
+
+.nav-item:last-child {
+    margin-right: 0;
+}
+
+ 
+
+.nav-item a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
